tests/snapshots/binding_analysis/annotated_assignment.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/annotated_assignment.input.py
---

