tests/snapshots/binding_analysis/augmented_assignment.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/augmented_assignment.input.py
---

