tests/snapshots/binding_analysis/class_method_lookup.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/class_method_lookup.input.py
---

