tests/snapshots/binding_analysis/closure.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/closure.input.py
---

