tests/snapshots/binding_analysis/closure.input.py.snap
---
source: tests/binding_analysis.rs
expression: source.binding_analysis()
input_file: tests/fixtures/binding_analysis/closure.input.py
---
bindings:
  - kinds:
      - FunctionDef
    name: outer
    read_offsets: []
    scope: 0
    write_offsets:
      - 154
  - kinds:
      - Assignment
    name: x
    read_offsets:
      - 206
    scope: 1
    write_offsets:
      - 167
  - kinds:
      - FunctionDef
    name: inner
    read_offsets:
      - 220
    scope: 1
    write_offsets:
      - 182
scopes:
  - bindings:
      outer: 0
    kind: Module
    parent: ~
  - bindings:
      inner: 2
      x: 1
    kind: Function
    parent: 0
  - bindings: {}
    kind: Function
    parent: 1
