tests/snapshots/binding_analysis/comprehension_scope.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/comprehension_scope.input.py
---

