tests/snapshots/binding_analysis/conditional_rebind.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/binding_analysis/conditional_rebind.input.py
---

