tests/snapshots/binding_analysis/conditional_rebind.input.py.snap
---
source: tests/binding_analysis.rs
expression: source.binding_analysis()
input_file: tests/fixtures/binding_analysis/conditional_rebind.input.py
---
bindings:
  - kinds:
      - Assignment
    name: cond
    read_offsets:
      - 177
    scope: 0
    write_offsets:
      - 162
  - kinds:
      - Assignment
    name: x
    read_offsets:
      - 215
    scope: 0
    write_offsets:
      - 187
      - 203
scopes:
  - bindings:
      cond: 0
      x: 1
    kind: Module
    parent: ~
